# Python_progect

./: CMakeLists.txt  README.md  build.sh  client.sh  server.sh
client/: main.cpp
client/Play/src/: base_constants.py  buttons.py  bysnes.py  clicker.py  constants.py  graphics.py  main.py  server.py
client/include/: Beginner.hpp  Client_obr.hpp  Connector.hpp  Init_connection.hpp  Reader.hpp  Server_obr.hpp  wait.hpp
client/src/: Beginner.cpp  Client_obr.cpp  Connector.cpp  Init_connection.cpp  Obr1.cpp  Reader.cpp  Server_obr.cpp  wait.cpp
server/: main.cpp
server/include/: Base.hpp  Connector.hpp  Obr2.hpp  Play.hpp  helper.hpp  map.hpp  obr1.hpp
server/src/: Connector.cpp  Obr2.cpp  Play.cpp  helper.cpp  map.cpp  obr1.cpp
src/: base_constants.py  buttons.py  bysnes.py  clicker.py  constants.py  graphics.py  main.py  server.py
src/graphics/: constants.py  graphics.py
